--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -14,4 +14,10 @@
         android:id="@+id/menuSchedule"
         ></item>
 
+    <item
+        android:title="SCORERS"
+        app:showAsAction="always"
+        android:id="@+id/menuScorers"
+        ></item>
+
 </menu>
