--- a/app/src/main/res/layout/activity_scorers.xml
+++ b/app/src/main/res/layout/activity_scorers.xml
@@ -7,13 +7,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="44"
+            android:layout_weight="43"
             android:background="@drawable/back"
             android:gravity="center"
             android:text="ScorerName"
@@ -22,9 +22,9 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="44"
+            android:layout_weight="43"
             android:background="@drawable/back"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:text="TeamName"
             android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:layout_weight="14"
             android:background="@drawable/back"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:text="Goals"
             android:textStyle="bold" />
 
