--- a/app/src/main/res/layout/league_list_item.xml
+++ b/app/src/main/res/layout/league_list_item.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/league_ImageView"
@@ -11,14 +12,14 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp" />
+        android:contentDescription="@string/todo"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/league_textView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="League Name"
