--- a/app/src/main/res/layout/result_list_item.xml
+++ b/app/src/main/res/layout/result_list_item.xml
@@ -12,7 +12,7 @@
         android:maxLines="2"
         android:layout_weight="2"
         android:background="@drawable/back"
-        android:text="Borussia Mönchengladbach"/>
+        android:text="@string/borussia_m_nchengladbach"/>
 
     <LinearLayout
         android:gravity="center"
@@ -27,8 +27,8 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:text="19:00"
+            android:textSize="17sp"
+            android:text="@string/_19_00"
             android:gravity="center"/>
 
         <LinearLayout
@@ -38,21 +38,21 @@
 
             <TextView
                 android:id="@+id/homeTeamGoals"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:textSize="20dp"
-                android:text="2"/>
+                android:textSize="20sp"
+                android:text="@string/_2"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:textSize="20dp"
-                android:text="-"/>
+                android:textSize="20sp"
+                android:text="@string/line"/>
 
             <TextView
                 android:id="@+id/awayTeamGoals"
@@ -60,9 +60,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:layout_marginRight="20dp"
-                android:textSize="20dp"
-                android:text="2"/>
+                android:layout_marginEnd="20dp"
+                android:textSize="20sp"
+                android:text="@string/_2"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -75,7 +75,7 @@
         android:maxLines="2"
         android:layout_weight="2"
         android:background="@drawable/back"
-        android:text="Borussia Mönchengladbach"/>
+        android:text="@string/borussia_m_nchengladbach"/>
 
 
 
