--- a/app/src/main/res/layout/team_list_item.xml
+++ b/app/src/main/res/layout/team_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_weight="0.5"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="1"
+        android:text="@string/_1"
         android:textSize="20sp" />
 
     <TextView
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:maxLines="2"
         android:textStyle="bold"
-        android:text="Borussia Mönchengladbach"
+        android:text="@string/borussia_m_nchengladbach"
         android:textSize="14sp" />
 
 
@@ -34,7 +34,7 @@
         android:layout_weight="0.8"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="6"
+        android:text="@string/_6"
         android:textSize="20sp" />
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_weight="0.8"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="4"
+        android:text="@string/_4"
         android:textSize="20sp" />
 
     <TextView
@@ -54,7 +54,7 @@
         android:layout_weight="0.8"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="2"
+        android:text="@string/_2"
         android:textSize="20sp" />
 
     <TextView
@@ -64,7 +64,7 @@
         android:layout_weight="0.8"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="1"
+        android:text="@string/_1"
         android:textSize="20sp" />
 
     <TextView
@@ -74,6 +74,6 @@
         android:layout_weight="0.8"
         android:background="@drawable/back"
         android:gravity="center"
-        android:text="20"
+        android:text="@string/_20"
         android:textSize="20sp" />
 </LinearLayout>
