--- a/app/src/main/res/layout/upcoming_match_list_item.xml
+++ b/app/src/main/res/layout/upcoming_match_list_item.xml
@@ -12,7 +12,7 @@
         android:maxLines="2"
         android:layout_weight="2"
         android:background="@drawable/back"
-        android:text="Borussia Mönchengladbach"/>
+        android:text="@string/borussia_m_nchengladbach"/>
 
     <LinearLayout
         android:background="@drawable/back"
@@ -28,8 +28,8 @@
             android:id="@+id/time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="19:00"
-            android:textSize="20dp"
+            android:text="@string/_19_00"
+            android:textSize="20sp"
             android:gravity="center"/>
 
     </LinearLayout>
@@ -42,6 +42,6 @@
         android:maxLines="2"
         android:layout_weight="2"
         android:background="@drawable/back"
-        android:text="Borussia Mönchengladbach"/>
+        android:text="@string/borussia_m_nchengladbach"/>
 
 </LinearLayout>
